# arctic-charr-packaged

./: .gitignore  .readthedocs.yaml  Arctic_charr_re_id_caves_a_and_b.xlsx  Arctic_charr_re_id_survival.R  README.md  install.ps1  install.sh  pyproject.toml  setup.py
arctic_charr_matcher/: DBUtil.py  LengthMatcher.py  Matcher.py  UnetExtractor.py  astroalignMatch.py  fish.py  grothMatcherCustom.py  tester.py  util.py
docs/source/: conf.py
python_code/: DBUtil.py  LengthMatcher.py  Matcher.py  Patch.py  UnetExtractor.py  algorithms.py  astroalign.py  astroalignMatch.py  grothMatcherCustom.py  tester.py  util.py
tests/: test_matcher.py
